DacAssign/C/.metadata/.plugins/org.eclipse.cdt.ui/if vov.build.log
22:37:09 **** Incremental Build of configuration Debug for project if vov ****
make all 
Building file: ../src/if vov.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/if vov.d" -MT"src/if\ vov.d" -o "src/if vov.o" "../src/if vov.c"
../src/if vov.c: In function ‘main’:
../src/if vov.c:16:6: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,0)// ~if(0) falls
      ^
../src/if vov.c:16:8: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,0)// ~if(0) falls
        ^
../src/if vov.c:21:6: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,0+1)// ~if(1) (nonzero value)
      ^
src/subdir.mk:18: recipe for target 'src/if vov.o' failed
../src/if vov.c:21:8: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,0+1)// ~if(1) (nonzero value)
        ^
../src/if vov.c:26:6: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,-1)//~if(-1) (nonzero value)
      ^
../src/if vov.c:26:8: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,-1)//~if(-1) (nonzero value)
        ^
../src/if vov.c:30:6: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,1)//
      ^
../src/if vov.c:30:8: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,1)//
        ^
../src/if vov.c:35:6: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,1)
      ^
../src/if vov.c:35:8: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  if(0,8,1)
        ^
../src/if vov.c:38:5: error: break statement not within loop or switch
     break;//break statement not use in if
     ^
../src/if vov.c:42:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/if vov.o] Error 1

22:37:09 Build Failed. 3 errors, 11 warnings. (took 380ms)

